@@ -1298,14 +1298,14 @@ Outputs:\n\
 */
 
 static PyMethodDef SpecMethods[] = {
-	{"FPSDR2",  FPSDR2,  METH_VARARGS|METH_KEYWORDS, FPSDR2_doc}, 
-	{"FPSDR3",  FPSDR3,  METH_VARARGS|METH_KEYWORDS, FPSDR3_doc}, 
-	{"FPSDC2",  FPSDC2,  METH_VARARGS|METH_KEYWORDS, FPSDC2_doc}, 
-	{"FPSDC3",  FPSDC3,  METH_VARARGS|METH_KEYWORDS, FPSDC3_doc}, 
-	{"PPSDR2",  PPSDR2,  METH_VARARGS|METH_KEYWORDS, PPSDR2_doc}, 
-	{"PPSDR3",  PPSDR3,  METH_VARARGS|METH_KEYWORDS, PPSDR3_doc}, 
-	{"PPSDC2",  PPSDC2,  METH_VARARGS|METH_KEYWORDS, PPSDC2_doc}, 
-	{"PPSDC3",  PPSDC3,  METH_VARARGS|METH_KEYWORDS, PPSDC3_doc}, 
+	{"FPSDR2",  (PyCFunction) FPSDR2,  METH_VARARGS|METH_KEYWORDS, FPSDR2_doc}, 
+	{"FPSDR3",  (PyCFunction) FPSDR3,  METH_VARARGS|METH_KEYWORDS, FPSDR3_doc}, 
+	{"FPSDC2",  (PyCFunction) FPSDC2,  METH_VARARGS|METH_KEYWORDS, FPSDC2_doc}, 
+	{"FPSDC3",  (PyCFunction) FPSDC3,  METH_VARARGS|METH_KEYWORDS, FPSDC3_doc}, 
+	{"PPSDR2",  (PyCFunction) PPSDR2,  METH_VARARGS|METH_KEYWORDS, PPSDR2_doc}, 
+	{"PPSDR3",  (PyCFunction) PPSDR3,  METH_VARARGS|METH_KEYWORDS, PPSDR3_doc}, 
+	{"PPSDC2",  (PyCFunction) PPSDC2,  METH_VARARGS|METH_KEYWORDS, PPSDC2_doc}, 
+	{"PPSDC3",  (PyCFunction) PPSDC3,  METH_VARARGS|METH_KEYWORDS, PPSDC3_doc}, 
 	{NULL,      NULL,    0,                          NULL      }
 };
 
