@@ -3,6 +3,9 @@
 
 0.5.4
   * Switched over to transparent compression in the lsl.common.metabundle functions
+  * Added support for '/' seperated YYYY/MM/DD in lsl.common.sdf.parseTimeString()
+  * Removed the 'return' values from the _gofast module import call
+  * Various cleanups in the C extentions to remove compile time warnings
 
 0.5.3
   * Changed the DROS spectrometer reader to match the new format
